styles/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  block-size: 100%;
}

.page {
  color: #fff;
  font-family: "Fira Sans Condensed", sans-serif;
  font-size: 18px;
  background-color: #1b1919;
  display: grid;
  place-items: center;
  inline-size: 1200px;
  block-size: 100%;
  min-height: 100vh;
  margin: auto;
}

h1,
h2,
h3,
h4,
p,
ul,
ol,
li,
blockquote,
fieldset {
  margin: 0;
  padding: 0;
}

ul,
ol {
  list-style: none;
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  width: 1px;
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
}

.content {
  display: flex;
  align-items: flex-end;
  gap: 30px;
  inline-size: 1140px;
}

.result__video-container {
  position: relative;
  inline-size: 711px;
  block-size: 386px;
  background: #fff;
  margin-bottom: 16px;
}

.result__video {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.search-form {
  height: 54px;
  display: flex;
  justify-content: space-between;
  font-family: "Fira Sans Condensed", sans-serif;
  font-weight: 400;
  font-size: 18px;
}

.search-form__fieldset {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border: none;
}

.search-form__fieldset-title {
  font-family: inherit;
  font-weight: inherit;
  font-size: 18px;
  color: #fff;
}

.search-form__textfield,
.search-form__checkbox {
  appearance: none;
}

.search-form__textfield:focus {
  outline: none;
}

.search-form__label > .search-form__textfield {
  width: 225px;
  height: 27px;

  letter-spacing: -0.1px;
  word-spacing: -4px;

  background-color: transparent;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  border-width: 1px 0;
  border-style: solid;
  border-color: #fff;
  color: #fff;
}

.search-form__textfield::placeholder {
  position: relative;
  left: -1px;
}

.search-form__checkbox-list {
  display: flex;
  justify-content: space-between;
  width: 212px;
}

.search-form__fieldset:has(.search-form__checkbox-list) {
  padding-left: 1px;
  padding-bottom: 4px;
}

.search-form__label {
  display: flex;
  width: fit-content;
}

.search-form__label:has(:focus-visible) {
  outline: 2px solid #fff;
  outline-offset: 2px;
}

.search-form__label:has(.search-form__pseudo-checkbox):hover
  .search-form__label-text {
  cursor: pointer;
  text-decoration: none;
  border-bottom: 2px solid #fff;
}

.search-form__pseudo-checkbox {
  width: 19px;
  height: 19px;
  align-self: center;
  background-color: transparent;
  border: 1px solid #000;
  outline: 1px solid #fff;
  margin-right: 5px;
  cursor: pointer;
}

.search-form__checkbox:checked + .search-form__pseudo-checkbox {
  background-color: #fff;
}

.search-form__checkbox:focus .search-form__pseudo-checkbox {
  outline: none;
}

.search-form__label-text {
  align-self: center;
}

.button {
  box-sizing: border-box;
  display: inline-block;
  appearance: none;
  min-height: 34px;
  cursor: pointer;
  background-color: transparent;
  color: #fff;
  border: 1px solid #ffffff;
  text-decoration: none;
  text-align: center;
  font-family: "Fira Sans Condensed", sans-serif;
  font-size: 18px;
  font-weight: 700;
  letter-spacing: -0.3px;
}

.button:focus {
  outline: none;
}

.button:focus-visible {
  outline: 2px solid #fff;
  outline-offset: 2px;
}

.button:hover {
  text-decoration: underline;
  outline: none;
}

.button:active {
  background: #545050;
  text-decoration: none;
}

.button:not(:hover, :focus-visible) {
  text-decoration: none;
  outline: none;
}

.search-form__submit-button {
  width: 194px;
  align-self: end;
}

.more-button {
  width: 100%;
}

.content__details {
  inline-size: 399px;
  display: flex;
  flex-direction: column;
  gap: 23px;
  inline-size: 100%;
  block-size: 100%;
}

.title {
  font-family: "Oswald", sans-serif;
  font-size: 75px;
  letter-spacing: 1px;
  line-height: 94%;
  text-transform: uppercase;
}

.content__accent {
  color: #545050;
}

.content__list {
  position: relative;
  height: 298px;
  display: flex;
  flex-direction: column;
  justify-content: start;
  overflow-y: auto;
}

.content__list-item:not(:last-child) {
  margin-bottom: 35px;
}

.content__list-item:focus-visible {
  outline: 2px solid #fff;
  outline-offset: 1px;
}

.content__card-link {
  display: block;
  text-decoration: none;
  color: #fff;
}

.content__card-link:hover * {
  text-decoration: underline;
}

.content__card-link:active {
  background-color: rgb(84, 80, 80);
  box-shadow: -4px 3px 0 rgba(84, 80, 80, 1), -4px -3px 0 rgba(84, 80, 80, 1);
}

.content__card-link_current {
  background-color: rgb(84, 80, 80);
  box-shadow: -4px 3px 0 rgba(84, 80, 80, 1), -4px -3px 0 rgba(84, 80, 80, 1);
}

.content__card-link .content__video-card-title,
.content__card-link .content__video-card-description {
  position: relative;
  display: inline-block;
}

.content__card-link:focus {
  outline: none;
}

.content__card-link:focus-visible {
  outline: 2px solid #fff;
  outline-offset: 2px;
}

.content__video-card {
  display: flex;
}

.content__video-card:hover {
  text-decoration: underline;
  text-decoration-color: #fff;
  text-decoration-thickness: 1px;
}

.content__video-card-description-container {
  width: 100%;
  padding-left: 2px;
  padding-top: 6px;
}

.content__video-card-title {
  font-family: Oswald, sans-serif;
  font-weight: 600;
  font-size: 30px;
  text-transform: uppercase;
  max-width: 195px;
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.content__video-card-description {
  font-family: "Fira Sans Condensed", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
}

.content__video-card-thumbnail {
  width: 195px;
  height: 103px;
  object-fit: cover;
  object-position: center;
}

